src.4/objects/Five9_Disposition_Mapping__c.object
<CustomObject>
    <label>Five9 Disposition Mapping</label>
    <nameField>
        <displayFormat>F9D-{0000}</displayFormat>
        <label>Five9 Disposition Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Five9 Disposition Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Account_Sales_Status__c</fullName>
        <label>Account Sales Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bogus</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity_Results__c</fullName>
        <label>Activity Results</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Future Event</fullName>
                </value>
                <value>
                    <fullName>Left Brochure</fullName>
                </value>
                <value>
                    <fullName>Left Voice Mail</fullName>
                </value>
                <value>
                    <fullName>No Answer/ Busy Signal</fullName>
                </value>
                <value>
                    <fullName>No-Show</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Rescheduled</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Spoke with-</fullName>
                </value>
                <value>
                    <fullName>Ownership Change</fullName>
                </value>
                <value>
                    <fullName>Note</fullName>
                </value>
                <value>
                    <fullName>Reminder</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Remoted in</fullName>
                </value>
                <value>
                    <fullName>Answered Reps Questions</fullName>
                </value>
                <value>
                    <fullName>Missed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-Person Cold Call</fullName>
                </value>
                <value>
                    <fullName>In-Person Demo</fullName>
                </value>
                <value>
                    <fullName>In-Person Follow Up</fullName>
                </value>
                <value>
                    <fullName>Inbound Call</fullName>
                </value>
                <value>
                    <fullName>Outbound Call</fullName>
                </value>
                <value>
                    <fullName>Phone Cold Call</fullName>
                </value>
                <value>
                    <fullName>Phone Demo</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Administrative/Other</fullName>
                </value>
                <value>
                    <fullName>OSR Event</fullName>
                </value>
                <value>
                    <fullName>ESR Event</fullName>
                </value>
                <value>
                    <fullName>Graphics Setup</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Sync Install</fullName>
                </value>
                <value>
                    <fullName>Custom Settings</fullName>
                </value>
                <value>
                    <fullName>Kick Off Call</fullName>
                </value>
                <value>
                    <fullName>Midway Decision Maker Call</fullName>
                </value>
                <value>
                    <fullName>Final Call</fullName>
                </value>
                <value>
                    <fullName>LinkedIn Message</fullName>
                </value>
                <value>
                    <fullName>Group Practice</fullName>
                </value>
                <value>
                    <fullName>PRT</fullName>
                </value>
                <value>
                    <fullName>Newsletters</fullName>
                </value>
                <value>
                    <fullName>Groups</fullName>
                </value>
                <value>
                    <fullName>SR Portal</fullName>
                </value>
                <value>
                    <fullName>Online Presence</fullName>
                </value>
                <value>
                    <fullName>New Integration</fullName>
                </value>
                <value>
                    <fullName>General Training</fullName>
                </value>
                <value>
                    <fullName>Tech Help</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
                <value>
                    <fullName>Reminders</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Five9_Disposition__c</fullName>
        <label>Five9 Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blacklisted</fullName>
                </value>
                <value>
                    <fullName>Bogus</fullName>
                </value>
                <value>
                    <fullName>Cold Call</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Existing Customer</fullName>
                </value>
                <value>
                    <fullName>Follow-up</fullName>
                </value>
                <value>
                    <fullName>Inbound-Blacklisted PM</fullName>
                </value>
                <value>
                    <fullName>Inbound-Demo</fullName>
                </value>
                <value>
                    <fullName>Inbound-Existing Customer</fullName>
                </value>
                <value>
                    <fullName>Inbound-Info Requested</fullName>
                </value>
                <value>
                    <fullName>Inbound-Non-healthcare</fullName>
                </value>
                <value>
                    <fullName>Inbound-Sales Transfer</fullName>
                </value>
                <value>
                    <fullName>Left live message</fullName>
                </value>
                <value>
                    <fullName>Left voicemail</fullName>
                </value>
                <value>
                    <fullName>No answer Busy signal</fullName>
                </value>
                <value>
                    <fullName>Non-healthcare</fullName>
                </value>
                <value>
                    <fullName>Spoke with-</fullName>
                </value>
                <value>
                    <fullName>Set 1-Day Callback</fullName>
                </value>
                <value>
                    <fullName>Set 3-Day Callback</fullName>
                </value>
                <value>
                    <fullName>Set 7-Day Callback</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Follow_Up_Days__c</fullName>
        <label>Follow-Up Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Spoke_With__c</fullName>
        <label>Spoke With</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>Five9_Disposition__c</columns>
        <columns>Activity_Type__c</columns>
        <columns>Activity_Results__c</columns>
        <columns>Spoke_With__c</columns>
        <columns>Account_Sales_Status__c</columns>
        <columns>Follow_Up_Days__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>